Foi modificado o template e foi retirado as libs.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
 			<name>In Project Repo</name>
 			<url>file://${project.basedir}/lib</url>
 		</repository>
+		
+		<repository>
+			<id>entities</id>
+			<url>https://dl.dropboxusercontent.com/u/1477113/maven/</url>
+		</repository>
+		
 		<repository>
 			<id>jboss-releases</id>
 			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
@@ -131,17 +137,32 @@
 			<artifactId>Entities</artifactId>
 			<version>3.8.0-RC</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>entities</groupId>
-			<artifactId>ueceTemplates</artifactId>
-			<version>1.1</version>
+			<artifactId>entities-themes</artifactId>
+			<version>1.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>entities</groupId>
 			<artifactId>freecssTemplates</artifactId>
 			<version>1.1</version>
 		</dependency>
+			
+	<!--	<dependency>
+			<groupId>entities</groupId>
+			<artifactId>ueceTemplates</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency> 
+			<groupId>entities</groupId>
+			<artifactId>freecssTemplates</artifactId>
+			<version>1.1</version>
+		</dependency>
+						-->
 	</dependencies>
+						
 	<build>
 		<finalName>${projeto}</finalName>
 		<plugins>
